@@ -145,6 +145,8 @@ ZONE2ZONE=2
 
 ACCOUNTING=Yes
 
+OPTIMIZE_ACCOUNTING=No
+
 DYNAMIC_BLACKLIST=Yes
 
 ###############################################################################
