@@ -54,6 +54,9 @@ None.
 
     Finally, chains with no references are deleted.
 
+    Accounting chains are subject to optimization if the new
+    OPTIMIZE_ACCOUNTING option is set to 'Yes' (default is 'No').
+
 2)  Shorewall now throws an error if:
 
     a) There are tracked providers; and
