@@ -2,6 +2,8 @@ Changes in 4.5.2
 
 1) Extend OPTIMIZE & 4 to all tables.
 
+2) Add OPTIMIZE_ACCOUNTING.
+
 Changes in 4.5.1
 
 1)  Fix syntax error in /sbin/shorewall.
